src/objects/Extentia_SIM__MP_CustomMapping__c.object
<CustomObject>
    <fields>
        <fullName>Extentia_SIM__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__Entity__c</fullName>
        <label>Entity</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Extentia_SIM__IsGeocode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsGeocode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__Is_Trigger_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Trigger Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__Pin_No__c</fullName>
        <label>Pin No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MP_CustomMapping</label>
    <nameField>
        <label>MP_CustomMapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MP_CustomMapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>